# freyr2

./: .gitmodules  .µconf  CMakeLists.txt  readme.md
examples/: terminal.cfg
firmware/esp32-freyr/: .gitignore  CMakeLists.txt  compile_commands.json  partitions.csv  sdkconfig  sdkconfig.old
firmware/esp32-freyr/devices/: device.cmake.µ.test  device.cpp.µ.test
firmware/esp32-freyr/main/: CMakeLists.txt  device.cmake  device.cpp  freyr.cpp  main.cpp  webif.cpp
firmware/esp32-freyr/main/modules/: egress_esp32_rmt.c  mod_esp32_control.c
src/: CMakeLists.txt
src/core/: animation.cpp  animation.hpp  animation_api.h  basemodule.cpp  basemodule.hpp  basemodule_api.h  egress.cpp  egress.hpp  egress_api.h  frame.cpp  frame.hpp  frame_api.h  ledset.hpp  module.cpp  module.hpp  module_api.h  orchestrator.hpp
src/main/: freyr.cpp  static-module-registry.hpp  statictest.cpp  test.cpp
src/modules/: CMakeLists.txt  anim_alert-s.c  anim_bifrost-s.c  anim_common.h  anim_congress.c  anim_glimmer.c  anim_propagator-s.c  anim_pulsar-s.c  anim_rainbow-s.c  anim_rainbow.c  anim_simplex-s.c  anim_sparkle.c  blend_api.h  blend_fade.c  blend_wipe.c  coordinates_api.h  display_api.hpp  egress_console.c  egress_dummy.c  egress_upsilon-striped.cpp  grouping_api.h  mod_bootstrap.cpp  mod_coordinates.cpp  mod_display.cpp  mod_filter_brightness.cpp  mod_filter_overlay.cpp  mod_grouping.cpp  mod_input_stdin.cpp  mod_mqtt.cpp  mod_streams.cpp  modulation_congress.h  modulation_scalar.h  stream_api.h
src/types/: stringlist.cpp  stringlist.h
src/util/: CMakeLists.txt  anim.h  egress.h  lock.hpp  module.hpp  sync.cpp  sync.hpp
tools/: build-module-info.py
webif/armcomp/: generate.py
webif/armcomp/configs/: .gitignore
webif/armcomp/src/: 00-common.css  10-slider.js  20-lut.js  20-style.css  40-util.js  50-screens.js  50-selection.js  60-iface.js  index.html
